Added all section,and extra section

--- a/index.html
+++ b/index.html
@@ -5,9 +5,128 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="#" class="nav">Home</a></li>
+            <li><a href="#" class="nav">About Me</a></li>
+            <li><a href="#" class="nav">My Recipies</a></li>
+            <li><a href="#" class="nav">Contact Us</a></li>
+
+        </ul>
+    </nav>
+
+    <section class="top-banner">
+        <div class="half-width">
+            <h1><span class="orange-color">Skip</span> The Diet,</h1>
+            <h1>Just Eat Healthy</h1>
+            <h1>With Food Network</h1>
+
+            <p>Imagine you don't need a diet because food for you</p>
+
+            <a class="order-btn" href="https://www.ubereats.com/">Order Food</a>
+        </div>
+        <div class="half-width">
+            <img src="images/female/Group 8425.png" alt="">
+        </div>
+    </section>
+
     
+    <section class="about-banner">
+        <div class="half-width">
+            <img src="images/female/Person Image.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>About Me</h2>
+            <p class="about-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum porro maxime, labore quidem aliquam, laborum libero delectus modi tempore dolores placeat. Sapiente veniam odio vitae repellendus perferendis quis consequatur quae.</p>
+
+            <a class="order-btn" href="https://www.ubereats.com/">Contact Me</a>
+        </div>
+
+    </section>
+
+    <section class="my-recipe">
+        <center>
+            <h1>My Recipies</h1>
+            <p>Here are my top class Recipies</p>
+
+            <div class="box">
+                <img src="images/food/Project Cover.jpg" alt="">
+                <h2>Jimmy Chop</h2>
+                <p>A delicious appetizer of a hard boiled egg enrobed in masala mashed potatoes deep-fried with a crispy bread crumb shell.</p>
+            </div>
+
+            <div class="box">
+                <img src="images/food/Project Cover1.jpg" alt="">
+                <h2>French Cutlet</h2>
+                <p>A delicious appetizer of a hard boiled egg enrobed in masala mashed potatoes deep-fried with a crispy bread crumb shell.</p>
+            </div>
+
+            <div class="box">
+                <img src="images/food/Project Cover.png" alt="">
+                <h2>Chicken Vegetables</h2>
+                <p>A delicious appetizer of a hard boiled egg enrobed in masala mashed potatoes deep-fried with a crispy bread crumb shell.</p>
+            </div>
+        </center>
+    </section>
+
+
+    <section class="reviews">
+        <center>
+            <h1>Food Reviews</h1>
+            <p>Here are my top class Recipies</p>
+
+            <div class="box-reviews">
+                <img src="images/male/person-3.png" alt="">
+                <h2>Mr. Rahim</h2>
+                <p> It’s a great experience. The ambiance is very welcoming and charming. Amazing Burgers, food and service.This place is great!</p>
+            </div>
+
+            <div class="box-reviews">
+                <img src="images/male/person-2.png" alt="">
+                <h2>Mr. Karim</h2>
+                <p>The ambiance is very welcoming and charming. Amazing Burgers, food and service.It’s a great experience. </p>
+            </div>
+
+            <div class="box-reviews">
+                <img src="images/male/person-3.png" alt="">
+                <h2>Mr. Jashim</h2>
+                <p>It’s a great experience. The ambiance is very welcoming and charming. Amazing Burgers, food and service.</p>
+            </div>
+        </center>
+    </section>
+    <section >
+        <center>
+            <div class="social-shadow">
+                <div class="social">
+                    <h1>700K</h1>
+                    <p>Youtube Subscribers</p>   
+                </div>
+                <div class="social">
+                    <h1>2.4m</h1>
+                    <p>Instagram FOllowers</p>
+                </div>
+                <div class="social">
+                    <h1>100K</h1>
+                    <p>Dribble Shot Likes</p>
+                </div>
+            </div>
+            
+        </center>
+    </section>
+
+
+    <footer>
+        <center>
+            <h2><span class="orange-color">FOOD</span> Network</h2>
+            <p>Eat healthy to live healthy.Live healthy to live happy</p>
+        </center>
+
+    </footer>
 </body>
 </html>
