Changes some margin padding issues

--- a/index.html
+++ b/index.html
@@ -6,50 +6,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+<!-- navber start here -->
     <nav>
         <ul>
             <li><a href="#" class="nav">Home</a></li>
             <li><a href="#" class="nav">About Me</a></li>
             <li><a href="#" class="nav">My Recipies</a></li>
             <li><a href="#" class="nav">Contact Us</a></li>
-
         </ul>
     </nav>
 
-    <section class="top-banner">
-        <div class="half-width">
-            <h1><span class="orange-color">Skip</span> The Diet,</h1>
-            <h1>Just Eat Healthy</h1>
-            <h1>With Food Network</h1>
+<!-- navber end here -->
 
-            <p>Imagine you don't need a diet because food for you</p>
+
+<!-- Top banner section start -->
+    <section class="top-banner">
+        <div class="banner-width">
+            <h1><span class="orange-color">Skip</span> The Diet,<br> Just Eat Healthy <br> With Food Network</h1>
+
+            <p>Imagine you don't need a diet because we provide healthy <br> and delicious food for you!</p>
 
             <a class="order-btn" href="https://www.ubereats.com/">Order Food</a>
         </div>
-        <div class="half-width">
+        <div class="banner-width">
             <img src="images/female/Group 8425.png" alt="">
         </div>
     </section>
-
+<!-- Top banner section end here -->
     
+<!-- About section start here -->
     <section class="about-banner">
         <div class="half-width">
             <img src="images/female/Person Image.png" alt="">
         </div>
         <div class="half-width">
             <h2>About Me</h2>
-            <p class="about-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum porro maxime, labore quidem aliquam, laborum libero delectus modi tempore dolores placeat. Sapiente veniam odio vitae repellendus perferendis quis consequatur quae.</p>
+            <p class="about-p">I am a professional diet trainer.I have 5 years of experiences.Basically i trained for healthy nutrients.Rather training online season,i have a beatiful chamber for diet nutrients. </p>
 
             <a class="order-btn" href="https://www.ubereats.com/">Contact Me</a>
         </div>
 
     </section>
 
+<!-- About section end here -->
+
+<!-- My recipe section start here -->
     <section class="my-recipe">
         <center>
             <h1>My Recipies</h1>
@@ -74,8 +81,9 @@
             </div>
         </center>
     </section>
+<!-- My recipe section end here -->
 
-
+<!-- Review section start here -->
     <section class="reviews">
         <center>
             <h1>Food Reviews</h1>
@@ -100,6 +108,9 @@
             </div>
         </center>
     </section>
+<!-- Review section end here -->
+
+<!-- Social section start here -->
     <section >
         <center>
             <div class="social-shadow">
@@ -119,8 +130,10 @@
             
         </center>
     </section>
+<!-- Social section end here -->
 
 
+<!-- footer section start -->
     <footer>
         <center>
             <h2><span class="orange-color">FOOD</span> Network</h2>
@@ -128,5 +141,6 @@
         </center>
 
     </footer>
+<!-- footer section end -->
 </body>
 </html>
