Final touch done.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <ul>
             <li><a href="#" class="nav">Home</a></li>
             <li><a href="#" class="nav">About Me</a></li>
+            <li><a href="#" class="nav">Reviews</a></li>
             <li><a href="#" class="nav">My Recipies</a></li>
             <li><a href="#" class="nav">Contact Us</a></li>
         </ul>
@@ -60,7 +61,7 @@
     <section class="my-recipe">
         <center>
             <h1>My Recipies</h1>
-            <p>Here are my top class Recipies</p>
+            <p>Here are some of my top class Recipies. This recipes are choose by most of the people. This recipes are make every ages..</p>
 
             <div class="box">
                 <img src="images/food/Project Cover.jpg" alt="">
@@ -87,7 +88,7 @@
     <section class="reviews">
         <center>
             <h1>Food Reviews</h1>
-            <p>Here are my top class Recipies</p>
+            <p>Here are my top Reviews. Every person they had these food items,most of them loved our food.</p>
 
             <div class="box-reviews">
                 <img src="images/male/person-3.png" alt="">
@@ -115,14 +116,17 @@
         <center>
             <div class="social-shadow">
                 <div class="social">
+                    <img src="images/shapes/youtube.png" alt="">
                     <h1>700K</h1>
                     <p>Youtube Subscribers</p>   
                 </div>
                 <div class="social">
+                    <img src="images/shapes/instagram.png" alt="">
                     <h1>2.4m</h1>
                     <p>Instagram FOllowers</p>
                 </div>
                 <div class="social">
+                    <img src="images/shapes/dribbble.png" alt="">
                     <h1>100K</h1>
                     <p>Dribble Shot Likes</p>
                 </div>
@@ -138,6 +142,7 @@
         <center>
             <h2><span class="orange-color">FOOD</span> Network</h2>
             <p>Eat healthy to live healthy.Live healthy to live happy</p>
+
         </center>
 
     </footer>
