Added five star review

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -92,18 +93,34 @@
 
             <div class="box-reviews">
                 <img src="images/male/person-3.png" alt="">
+                <p class="star-review"><span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span></p>
                 <h2>Mr. Rahim</h2>
                 <p> It’s a great experience. The ambiance is very welcoming and charming. Amazing Burgers, food and service.This place is great!</p>
             </div>
 
             <div class="box-reviews">
                 <img src="images/male/person-2.png" alt="">
+                <p class="star-review"><span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star"></span></p>
                 <h2>Mr. Karim</h2>
                 <p>The ambiance is very welcoming and charming. Amazing Burgers, food and service.It’s a great experience. </p>
             </div>
 
             <div class="box-reviews">
                 <img src="images/male/person-3.png" alt="">
+                <p class="star-review">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star "></span>
+                    <span class="fa fa-star"></span></p>
                 <h2>Mr. Jashim</h2>
                 <p>It’s a great experience. The ambiance is very welcoming and charming. Amazing Burgers, food and service.</p>
             </div>
