Final polishes done

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 <!-- navber start here -->
     <nav>
         <ul>
-            <li><a href="#" class="nav">Home</a></li>
-            <li><a href="#" class="nav">About Me</a></li>
-            <li><a href="#" class="nav">My Recipies</a></li>
-            <li><a href="#" class="nav">Reviews</a></li>
-            <li><a href="#" class="nav">Contact Us</a></li>
+            <li><a href="#top" class="nav">Home</a></li>
+            <li><a href="#about" class="nav">About Me</a></li>
+            <li><a href="#recipie" class="nav">My Recipies</a></li>
+            <li><a href="#review" class="nav">Reviews</a></li>
+            <li><a href="#contact" class="nav">Contact Us</a></li>
         </ul>
     </nav>
 
@@ -28,7 +28,7 @@
 
 
 <!-- Top banner section start -->
-    <section class="top-banner">
+    <section id="top" class="top-banner">
         <div class="banner-width">
             <h1><span class="orange-color">Skip</span> The Diet,<br> Just Eat Healthy <br> With Food Network</h1>
 
@@ -43,7 +43,7 @@
 <!-- Top banner section end here -->
     
 <!-- About section start here -->
-    <section class="about-banner">
+    <section id="about" class="about-banner">
         <div class="half-width">
             <img src="images/female/Person Image.png" alt="">
         </div>
@@ -59,7 +59,7 @@
 <!-- About section end here -->
 
 <!-- My recipe section start here -->
-    <section class="my-recipe">
+    <section id="recipie" class="my-recipe">
         <center>
             <h1>My Recipies</h1>
             <p>Here are some of my top class Recipies. This recipes are choose by most of the people. This recipes are make every ages..</p>
@@ -86,7 +86,7 @@
 <!-- My recipe section end here -->
 
 <!-- Review section start here -->
-    <section class="reviews">
+    <section id="review" class="reviews">
         <center>
             <h1>Food Reviews</h1>
             <p>Here are my top Reviews. Every person they had these food items,most of them loved our food.</p>
@@ -129,7 +129,7 @@
 <!-- Review section end here -->
 
 <!-- Social section start here -->
-    <section >
+    <section id="contact">
         <center>
             <div class="social-shadow">
                 <div class="social">
